--- a/WRM_TrashRecyclePopulation/packages.config
+++ b/WRM_TrashRecyclePopulation/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="2.8.0" targetFramework="net5.0" />
-  <package id="Costura.Fody" version="5.3.0" targetFramework="net5.0" />
-  <package id="Fody" version="6.5.1" targetFramework="net5.0" developmentDependency="true" />
+  <package id="Costura.Fody" version="5.7.0" targetFramework="net5.0" />
+  <package id="Fody" version="6.6.0" targetFramework="net5.0"  />
+  <package id="EPPlus" version="5.8.3" targetFramework="net5.0"   />
 </packages>
