--- a/WRM_TrashRecyclePopulation/WRM_TrashRecyclePopulation.csproj
+++ b/WRM_TrashRecyclePopulation/WRM_TrashRecyclePopulation.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <StartupObject>WRM_TrashRecyclePopulation.Program</StartupObject>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
