--- a/WRM_TrashRecyclePopulation/efpt.config.json
+++ b/WRM_TrashRecyclePopulation/efpt.config.json
@@ -36,9 +36,9 @@
    ],
    "UiHint": "edimmu\\udug.WRM_TrashRecycle.dbo",
    "UseBoolPropertiesWithoutDefaultSql": false,
-   "UseDatabaseNames": false,
+   "UseDatabaseNames": true,
    "UseDbContextSplitting": true,
-   "UseFluentApiOnly": true,
+   "UseFluentApiOnly": false,
    "UseHandleBars": false,
    "UseInflector": false,
    "UseLegacyPluralizer": false,
