re-organized code. Still need to add in business fields

--- a/WRM_TrashRecyclePopulation/efpt.config.json
+++ b/WRM_TrashRecyclePopulation/efpt.config.json
@@ -34,12 +34,13 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "edimmu\\udug.WRM_TrashRecycle.dbo",
+   "UiHint": "APPTESTDB\\APPSSQL16.",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
    "UseDbContextSplitting": true,
    "UseFluentApiOnly": false,
    "UseHandleBars": false,
+   "UseHierarchyId": false,
    "UseInflector": false,
    "UseLegacyPluralizer": false,
    "UseManyToManyEntity": false,
